--- a/Actual Project/deposit.ui
+++ b/Actual Project/deposit.ui
@@ -150,6 +150,9 @@ border-color: rgb(170, 0, 0);</string>
      <height>31</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">font: 12pt &quot;MS Shell Dlg 2&quot;;</string>
+   </property>
    <property name="text">
     <string>&lt;- Back</string>
    </property>
@@ -159,9 +162,12 @@ border-color: rgb(170, 0, 0);</string>
     <rect>
      <x>10</x>
      <y>340</y>
-     <width>101</width>
+     <width>131</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 12pt &quot;MS Shell Dlg 2&quot;;</string>
    </property>
    <property name="text">
     <string>Logout and Exit</string>
@@ -170,11 +176,14 @@ border-color: rgb(170, 0, 0);</string>
   <widget class="QPushButton" name="pushButton_5">
    <property name="geometry">
     <rect>
-     <x>440</x>
+     <x>430</x>
      <y>10</y>
-     <width>51</width>
+     <width>61</width>
      <height>21</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 12pt &quot;MS Shell Dlg 2&quot;;</string>
    </property>
    <property name="text">
     <string>About</string>
