--- a/Actual Project/welcome.ui
+++ b/Actual Project/welcome.ui
@@ -6,19 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>700</width>
+    <width>680</width>
     <height>600</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>700</width>
+    <width>680</width>
     <height>600</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>700</width>
+    <width>680</width>
     <height>600</height>
    </size>
   </property>
@@ -65,9 +65,9 @@
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>110</y>
+      <y>120</y>
       <width>351</width>
-      <height>61</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -77,7 +77,7 @@
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>290</x>
+      <x>280</x>
       <y>550</y>
       <width>281</width>
       <height>16</height>
@@ -90,7 +90,7 @@
    <widget class="QPushButton" name="signUpButton">
     <property name="geometry">
      <rect>
-      <x>570</x>
+      <x>550</x>
       <y>540</y>
       <width>101</width>
       <height>41</height>
@@ -114,7 +114,7 @@
       <x>130</x>
       <y>160</y>
       <width>411</width>
-      <height>351</height>
+      <height>301</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -130,7 +130,7 @@ border:2px solid;</string>
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>150</y>
+       <y>160</y>
        <width>181</width>
        <height>41</height>
       </rect>
@@ -158,12 +158,12 @@ border:2px solid;</string>
       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:20pt;&quot;&gt;Login ID: &lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit">
+    <widget class="QLineEdit" name="username">
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>60</y>
-       <width>381</width>
+       <y>70</y>
+       <width>391</width>
        <height>51</height>
       </rect>
      </property>
@@ -177,12 +177,12 @@ font: 16pt &quot;MS Shell Dlg 2&quot;;
       <string/>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_2">
+    <widget class="QLineEdit" name="password">
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>190</y>
-       <width>381</width>
+       <y>210</y>
+       <width>391</width>
        <height>51</height>
       </rect>
      </property>
@@ -198,38 +198,6 @@ background-color: rgb(255, 255, 255);</string>
      </property>
      <property name="echoMode">
       <enum>QLineEdit::Password</enum>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="loginButton">
-     <property name="enabled">
-      <bool>true</bool>
-     </property>
-     <property name="geometry">
-      <rect>
-       <x>110</x>
-       <y>280</y>
-       <width>171</width>
-       <height>51</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>18</pointsize>
-      </font>
-     </property>
-     <property name="layoutDirection">
-      <enum>Qt::LeftToRight</enum>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-color: rgb(0, 170, 255);
-selection-color: rgb(85, 255, 0);
-selection-background-color: rgb(0, 170, 0);
-selection{
-		background-color: green;
-}</string>
-     </property>
-     <property name="text">
-      <string>Login</string>
      </property>
     </widget>
    </widget>
@@ -253,7 +221,7 @@ background-color: rgb(85, 85, 255);</string>
    <widget class="QPushButton" name="pushButton_5">
     <property name="geometry">
      <rect>
-      <x>620</x>
+      <x>600</x>
       <y>10</y>
       <width>71</width>
       <height>31</height>
@@ -261,6 +229,38 @@ background-color: rgb(85, 85, 255);</string>
     </property>
     <property name="text">
      <string>About</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="loginButton">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>240</x>
+      <y>470</y>
+      <width>171</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>18</pointsize>
+     </font>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::LeftToRight</enum>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(0, 170, 255);
+selection-color: rgb(85, 255, 0);
+selection-background-color: rgb(0, 170, 0);
+selection{
+		background-color: green;
+}</string>
+    </property>
+    <property name="text">
+     <string>Login</string>
     </property>
    </widget>
   </widget>
