--- a/Actual Project/welcome.ui
+++ b/Actual Project/welcome.ui
@@ -64,7 +64,7 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>130</x>
+      <x>140</x>
       <y>120</y>
       <width>351</width>
       <height>31</height>
@@ -111,10 +111,10 @@
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>160</y>
-      <width>411</width>
-      <height>301</height>
+      <x>140</x>
+      <y>150</y>
+      <width>371</width>
+      <height>311</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -163,7 +163,7 @@ border:2px solid;</string>
       <rect>
        <x>10</x>
        <y>70</y>
-       <width>391</width>
+       <width>351</width>
        <height>51</height>
       </rect>
      </property>
@@ -182,7 +182,7 @@ font: 16pt &quot;MS Shell Dlg 2&quot;;
       <rect>
        <x>10</x>
        <y>210</y>
-       <width>391</width>
+       <width>351</width>
        <height>51</height>
       </rect>
      </property>
@@ -198,6 +198,24 @@ background-color: rgb(255, 255, 255);</string>
      </property>
      <property name="echoMode">
       <enum>QLineEdit::Password</enum>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_2">
+     <property name="geometry">
+      <rect>
+       <x>310</x>
+       <y>265</y>
+       <width>41</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: white;
+border-radius:0%;
+border:none;</string>
+     </property>
+     <property name="text">
+      <string>Show</string>
      </property>
     </widget>
    </widget>
@@ -233,7 +251,7 @@ background-color: rgb(85, 85, 255);</string>
    </widget>
    <widget class="QPushButton" name="loginButton">
     <property name="enabled">
-     <bool>true</bool>
+     <bool>false</bool>
     </property>
     <property name="geometry">
      <rect>
@@ -261,6 +279,22 @@ selection{
     </property>
     <property name="text">
      <string>Login</string>
+    </property>
+   </widget>
+   <widget class="QGroupBox" name="groupBox_2">
+    <property name="geometry">
+     <rect>
+      <x>550</x>
+      <y>290</y>
+      <width>71</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+    <property name="title">
+     <string>GroupBox</string>
     </property>
    </widget>
   </widget>
