--- a/Actual Project/options.ui
+++ b/Actual Project/options.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Transactions</string>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(170, 255, 127);</string>
@@ -287,6 +287,16 @@ color: rgb(85, 0, 127);</string>
    </property>
   </widget>
  </widget>
+ <tabstops>
+  <tabstop>withdraw</tabstop>
+  <tabstop>deposit</tabstop>
+  <tabstop>viewBalance</tabstop>
+  <tabstop>logout</tabstop>
+  <tabstop>pushButton_5</tabstop>
+  <tabstop>pushButton_8</tabstop>
+  <tabstop>pushButton_2</tabstop>
+  <tabstop>pushButton_7</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
